--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "async-exit-hook": "^2.0.1",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
+    "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
     "mongodb": "^6.11.0"
   },
   "devDependencies": {
