--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "async-exit-hook": "^2.0.1",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "joi": "^17.13.3",
+    "lodash": "^4.17.21",
     "mongodb": "^6.11.0"
   },
   "devDependencies": {
